# akaifat

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt
src/main/: AbstractFileSystem.hpp  AbstractFsObject.hpp  BlockDevice.hpp  ByteBuffer.hpp  FileSystem.hpp  FileSystemFactory.hpp  FsDirectory.hpp  FsDirectoryEntry.hpp  FsFile.hpp  ImageBlockDevice.hpp  SuperFloppyFormatter.hpp  akaifat.cpp  akaifat.hpp  strutil.hpp
src/main/fat/: AbstractDirectory.cpp  AbstractDirectory.hpp  AkaiFatFileSystem.cpp  AkaiFatFileSystem.hpp  AkaiFatLfnDirectory.cpp  AkaiFatLfnDirectory.hpp  AkaiFatLfnDirectoryEntry.hpp  AkaiPart.cpp  AkaiPart.hpp  BootSector.cpp  BootSector.hpp  ClusterChain.hpp  ClusterChainDirectory.hpp  Fat.hpp  Fat16BootSector.hpp  Fat16RootDirectory.hpp  FatDirectoryEntry.cpp  FatDirectoryEntry.hpp  FatFile.hpp  FatType.hpp  LittleEndian.hpp  Sector.hpp  ShortName.hpp  ShortNameGenerator.hpp
src/main/util/: ByteBuffer.hpp  DummyVolumeMounter.cpp  LinuxRemovableVolumes.cpp  LinuxVolumeMounter.cpp  MacOSRemovableVolumes.cpp  MacOSRemovableVolumes.mm  MacOSVolumeMounter.cpp  MacOSVolumeMounter.mm  RemovableVolumes.h  SuperFloppyFormatter.hpp  VolumeMounter.h  WindowsRemovableVolumes.cpp  WindowsVolumeMounter.cpp  string_util.hpp
src/test/: FatTests.cpp  test.cpp  test.hpp
src/win_raw_access_service/: RawAccessSvc.cpp  RawAccessSvcConfig.cpp  RawAccessSvcControl.cpp
test_package/: conanfile.py  test.cpp
